<resources>
    <string name="app_name">Reto1C4</string>


    //Textos home
    <string name="text_Home">Bienvenido</string>
    <string name="btn_Home">Catalogo</string>

    //Textos Catalogo
    <string name="text_TituloCatalogo">Catalogo</string>

    <string name="text_Producto1">Guitarra</string>
    <string name="text_Producto2">Saxofon</string>
    <string name="text_Producto3">Trompeta</string>

    <string name="btn_Producto1">Ver mas</string>
    <string name="btn_Producto2">Ver mas</string>
    <string name="btn_Producto3">Ver mas</string>
    <string name="btn_ProductoHome">Home</string>

    //Textps Informacion
    <string name="btn_Info">Volver</string>
    <string name="text_info">Ver mas</string>

    //Textox Template
    <string name="text_NombreTemplateProducto">Producto</string>
    <string name="text_btnTemplateProducto">Ver mas</string>
    <string name="text_PrecioTemplateProducto">Precio</string>
    <string name="text_DescipcionTemplateProducto">Descripcion</string>

    //Textos Formulario
    <string name="text_TituloForm">Formulario</string>
    <string name="btn_Update">UPDATE</string>
    <string name="btn_Delete">DELETE</string>
    <string name="btn_Get">GET</string>
    <string name="btn_Add">Agregar</string>
    <string name="text_NameFormProduct">Producto</string>
    <string name="text_DescriptionFormProduct">Descripcion</string>



</resources>