<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondohome"
    tools:context=".Catalogo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textTituloCatalago"
                    android:layout_width="match_parent"
                    android:layout_height="109dp"
                    android:gravity="center"
                    android:fontFamily="casual"
                    android:text="@string/text_TituloCatalogo"
                    android:textSize="50sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/imgProducto1"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/producto1" />

                    <TextView
                        android:id="@+id/textProducto1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/text_Producto1" />

                    <Button
                        android:id="@+id/btnProducto1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#7C334C"
                        android:fontFamily="casual"
                        android:text="@string/btn_Producto1" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgProducto2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/producto2" />

                    <TextView
                        android:id="@+id/textProducto2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/text_Producto2" />

                    <Button
                        android:id="@+id/btnProducto2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#7C334C"
                        android:fontFamily="casual"
                        android:text="@string/btn_Producto2" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgProducto3"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/producto3" />

                    <TextView
                        android:id="@+id/textProducto3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/text_Producto3" />

                    <Button
                        android:id="@+id/btnProducto3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#7C334C"
                        android:fontFamily="casual"
                        android:text="@string/btn_Producto3" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnProductoHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#7C334C"
                    android:fontFamily="casual"
                    android:text="@string/btn_ProductoHome" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>