<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondohome"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgTemplateProducto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTemplateProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:textSize="30dp"
                android:text="@string/text_NombreTemplateProducto" />

            <TextView
                android:id="@+id/textDescripcionTemplateProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/text_DescipcionTemplateProducto" />

            <TextView
                android:id="@+id/textPrecioTemplateProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:textSize="20dp"
                android:text="@string/text_PrecioTemplateProducto" />

        </LinearLayout>

        <Button
            android:id="@+id/btnTemplateProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:backgroundTint="#7C334C"
            android:layout_weight="1"
            android:text="@string/text_btnTemplateProducto" />

    </LinearLayout>
</LinearLayout>